2004-02-24  Corinna Vinschen  <corinna@vinschen.de>

	* thread.cc (pthread::cancelable_wait): Rearrange slightly.
	Add do_sig_wait parameter.  Wait for signal_arrived if set to true.
	Return WAIT_SIGNALED if signal arrived.
	(pthread_cond::wait): Accomodate change to pthread::cancelable_wait.
	(pthread::join): Ditto.
	(semaphore::_timedwait): Ditto.
	(semaphore::_wait): Ditto.  Change to return int to allow status
	feedback.
	(semaphore::wait): Return return value from semaphore::_wait.
	* thread.h (WAIT_SIGNALED): New definition.
	(pthread::cancelable_wait): Change declaration.  Define do_sig_wait   
	as false by default to not interfere with existing calls accidentally.
	(semaphore::_wait): Declare int.

2004-02-21  Christopher Faylor  <cgf@redhat.com>

	* exceptions.cc (sigpacket::process): Make sure that tls is filled in
	for SIGSTOP condition.
	(_cygtls::call_signal_handler): Restore signal mask using saved oldmask
	rather than current oldmask.

2004-02-20  Christopher Faylor  <cgf@redhat.com>

	* path.cc (conv_path_list): Return error condition.
	(copy1): New function.
	(copyenc): New function.
	(mount_item::fnmunge): Return error condition.  Use new functions to
	copy strings.
	(mount_item::build_win32): Ditto.
	(mount_info::conv_to_win32_path): Return error condition.
	(cygwin_conv_to_posix_path): Return result of path conversion.
	(cygwin_conv_to_full_posix_path): Ditto.
	(return_with_errno): New macro.
	(cygwin_win32_to_posix_path_list): Use new macro to potentially set
	errno.
	(cygwin_posix_to_win32_path_list): Ditto.
	* path.h (mount_item::fnmunge): Add size argument.
	(mount_item::build_win32): Ditto.

2004-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* getopt.c: Avoid useless compiler warnings.

2004-02-20  Corinna Vinschen  <corinna@vinschen.de>

	* getopt.c: Replace with latest vanilla(!) OpenBSD version 1.16.

2004-02-18  Christopher Faylor  <cgf@redhat.com>

	* fork.cc (fork_child): Invert sense of test which defeated correct